new  server set uo added

--- a/videoapp/index.html
+++ b/videoapp/index.html
@@ -5,8 +5,8 @@
   <title>React App</title>
   <link rel="stylesheet" href="/css/style.css">
 </head><body>
- <h1>Welcome to my post it messaging app</h1>
-  
+ <div id = "app">#App</div>
+  <script src ="bundle.js"></script>
 </body>
 </html>
 
